--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Good bot",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-mocha tests/**/*.tests.ts"
   },
   "keywords": [],
   "author": "ADAMJR#0001",
   "license": "ISC",
   "dependencies": {
+    "@types/chai": "^4.2.10",
+    "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.3",
     "discord.js": "^12.0.1",
     "mongoose": "^5.9.3",
