finish non tested xp module

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "token": "Njg1ODY3NzAzMzUyODE5NzIw.XmO6Hg.AXPDPo_wq91Mri-AAniuKUmqCkc",
     "mongoURL": "mongodb://localhost/2PG",
-    "modules": ["announce", "auto-mod", "general", "music", "xp"]
+    "modules": ["announce", "auto-mod", "general", "music", "xp"],
+    "webappURL": "https://2pg.xyz"
 }
