--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "author": "ADAMJR#0001",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.2.10",
-    "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.3",
     "@types/ws": "^7.2.2",
     "discord.js": "^12.0.1",
@@ -20,7 +18,10 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.10",
+    "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
-    "mocha": "^7.1.0"
+    "mocha": "^7.1.0",
+    "ts-mockito": "^2.5.0"
   }
 }
