--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/ws": "^7.2.2",
     "discord.js": "^12.0.1",
     "mongoose": "^5.9.3",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.1.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
