--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
   "author": "ADAMJR#0001",
   "license": "ISC",
   "dependencies": {
-    "@types/mongoose": "^5.7.3",
-    "@types/ws": "^7.2.2",
     "discord.js": "^12.0.1",
     "mongoose": "^5.9.3",
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.1.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/chai": "^4.2.10",
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
+    "@types/mongoose": "^5.7.3",
+    "@types/ws": "^7.2.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.0",
+    "ts-mocha": "^6.0.0",
     "ts-mockito": "^2.5.0"
   }
 }
