--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.0.2",
+    "erela.js": "^1.1.7",
     "mongoose": "^5.9.3",
     "typescript": "^3.8.3"
   },
