--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "test": "ts-mocha tests/**/*.tests.ts",
     "test:u": "ts-mocha tests/unit/*/*.tests.ts",
     "test:i": "ts-mocha tests/integration/*/*.tests.ts",
-    "start": "nodemon --exec ts-node bot.ts --watch * -e ts,json"
+    "start": "nodemon --exec ts-node bot.ts --watch * -e ts,json",
+    "start:api": "cd api && nodemon --exec ts-node server.ts --watch * -e ts,js"
   },
   "keywords": [],
   "author": "ADAMJR#0001",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "canvas": "^2.6.1",
+    "cors": "^2.8.5",
+    "disco-oauth": "^4.2.1",
     "discord.js": "^12.0.2",
     "erela.js": "^1.1.7",
+    "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "typescript": "^3.8.3"
   },
@@ -25,10 +31,12 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.3",
+    "@types/supertest": "^2.0.8",
     "@types/ws": "^7.2.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.0",
+    "supertest": "^4.0.2",
     "ts-mocha": "^6.0.0",
     "ts-mockito": "^2.5.0"
   }
