--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.0",
+    "nodemon": "^2.0.3",
     "supertest": "^4.0.2",
     "ts-mocha": "^6.0.0",
     "ts-mockito": "^2.5.0"
