add tested command usage

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ts-mocha tests/**/*.tests.ts",
     "test:u": "ts-mocha tests/unit/*/*.tests.ts",
     "test:i": "ts-mocha tests/integration/*/*.tests.ts",
-    "start": "nodemon --exec ts-node bot.ts --watch * -e ts,json",
+    "start": "npm run start:music | nodemon --exec ts-node bot.ts --watch * -e ts,json",
     "start:music": "cd dist/lavalink && java -jar Lavalink.jar"
   },
   "keywords": [],
