--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:u": "ts-mocha tests/unit/*/*.tests.ts",
     "test:i": "ts-mocha tests/integration/*/*.tests.ts",
     "start": "npm run start:music | nodemon --exec ts-node bot.ts --watch * -e ts,json",
+    "start:bot": "nodemon --exec ts-node bot.ts --watch * -e ts,json",
     "start:music": "cd dist/lavalink && java -jar Lavalink.jar"
   },
   "keywords": [],
