--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "test": "ts-mocha tests/**/*.tests.ts",
     "test:u": "ts-mocha tests/unit/**/*.tests.ts",
     "test:i": "ts-mocha tests/integration/**/*.tests.ts",
-    "start": "npm run start:music | nodemon --exec ts-node bot.ts --watch * -e ts,json",
+    "start": "npm run start:music | ts-node bot.ts",
+    "start:dev": "npm run start:music | npm run start:bot",
     "start:bot": "nodemon --exec ts-node bot.ts --watch * -e ts,json",
     "start:music": "cd dist/lavalink && java -jar Lavalink.jar"
+  },
+  "engines": {
+    "node": "12.x"
   },
   "keywords": [],
   "author": "ADAMJR#0001",
