--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "ts-mocha tests/**/*.tests.ts",
     "test:u": "ts-mocha tests/unit/**/*.tests.ts",
     "test:i": "ts-mocha tests/integration/**/*.tests.ts",
-    "start": "npm run start:music | ts-node bot.ts",
-    "start:dev": "npm run start:music | npm run start:bot",
-    "start:bot": "nodemon --exec ts-node bot.ts --watch * -e ts,json",
+    "start": "npm run start:music | npm run start:bot",
+    "start:dev": "npm run start:music | nodemon --exec ts-node bot.ts --watch * -e ts,json",
+    "start:bot": "ts-node bot.ts",
     "start:music": "cd dist/lavalink && java -jar Lavalink.jar"
   },
   "engines": {
@@ -28,7 +28,10 @@
     "erela.js": "^1.1.7",
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
-    "stripe": "^8.39.1"
+    "stripe": "^8.39.1",
+    "ts-node": "^8.10.1",
+    "nodemon": "^2.0.3",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -41,11 +44,8 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.2",
-    "nodemon": "^2.0.3",
     "supertest": "^4.0.2",
     "ts-mocha": "^6.0.0",
-    "ts-mockito": "^2.5.0",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
+    "ts-mockito": "^2.5.0"
   }
 }
