--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "ADAMJR#0001",
   "license": "ISC",
   "dependencies": {
+    "@types/node",
     "@2pg/music": "^1.1.2",
     "@2pg/oauth": "^1.0.6",
     "body-parser": "^1.19.0",
