--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "author": "ADAMJR#0001",
   "license": "ISC",
   "dependencies": {
-    "@types/node",
     "@2pg/music": "^1.1.2",
     "@2pg/oauth": "^1.0.6",
+    "@types/node": "^12.0.0",
     "body-parser": "^1.19.0",
     "canvas": "^2.6.1",
     "cors": "^2.8.5",
