--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@2pg/music": "^1.1.2",
     "@2pg/oauth": "^1.0.6",
+    "@discordjs/opus": "^0.4.0",
     "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.10",
     "@types/chai-as-promised": "^7.1.2",
@@ -26,11 +27,11 @@
     "@types/express": "^4.17.9",
     "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.3",
+    "@types/node": "^12.0.0",
     "@types/supertest": "^2.0.8",
     "@types/ws": "^7.2.2",
-    "@types/node": "^12.0.0",
     "body-parser": "^1.19.0",
-    "canvas": "^2.6.1",
+    "canvas": "^2.7.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "discord.js": "^12.0.2",
