--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "env": {
     "API_URL": {
       "description": "Same as DASHBOARD_URL, but with /api at the end.",
-      "value": "https://<heroku_app_name>/herokuapp.com/api"
+      "value": "https://<heroku_app_name>.herokuapp.com/api"
     },
     "CLIENT_ID": {
       "description": "Client ID from https://discord.com/developers.",    
